--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "httpsig-webtool",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/DinoChiesa/httpsig-webtool.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --debug --output-pathinfo --devtool source-map --mode=development --watch --colors",
-    "devbuild": "webpack --debug --output-pathinfo --devtool source-map --mode=development --progress --colors",
-    "build": "rm -r dist/* && webpack --mode=production --progress --colors"
+    "watch": "webpack --output-pathinfo --devtool source-map --mode=development --watch --color",
+    "devbuild": "webpack --output-pathinfo --devtool source-map --mode=development --progress --color",
+    "build": "rm -rf dist/* && webpack --mode=production --progress --color"
   },
   "keywords": [
     "JWT",
@@ -17,22 +21,26 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "jquery": "^3.5.0",
     "node-rsa": "^1.0.7",
     "open-iconic": "^1.1.1",
-    "popper.js": "^1.16.0"
+    "popper.js": "^1.16.0",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "child_process": "^1.0.2",
     "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^3.4.2",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "node-sass": "^4.14.1",
     "precss": "^3.1.2",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^11.0.1",
     "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.10"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.35.0",
+    "webpack-cli": "^4.6.0"
   }
 }
